<resources>
    <string name="app_name">Jolly Soothing Era</string>
    <string name="headline">𝐖𝐞𝐥𝐜𝐨𝐦𝐞 𝐓𝐨 𝐉𝐨𝐥𝐥𝐲\'𝐬 𝐒𝐨𝐨𝐭𝐡𝐢𝐧𝐠 𝐄𝐫𝐚</string>
    <string name="remember_me">Remember Me</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="log_in">LOG IN</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="this_is_second_activity">This is second activity</string>
    <string name="enter_details_below_to_sign_up">Enter Details Below to Sign Up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="enter_d_o_b">Enter D.O.B.</string>
    <string name="select_date">Select date</string>
    <string name="set_password">Set Password</string>
    <string name="select">Select</string>
    <string name="todo1">TODO</string>
    <string name="log_out">Log Out</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="todo2">TODO</string>
    <string name="feed">Feed</string>
    <string name="donate">Donate</string>
    <string name="suggestions">Suggestions</string>
    <string name="extras">Extras</string>
    <string name="about">About</string>
    <string name="rate_us">Rate Us</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_suggestions">Enter Your Suggestions</string>
    <string name="we_appreciate_your_suggestions">We Appreciate Your Suggestions</string>
    <string name="submit">Submit</string>
    <string name="work_for_cause_not_for_applause">Work For Cause, Not For Applause</string>
    <string name="swipe_right_to_open_navigation_drawer">Swipe Right To Open Navigation Drawer</string>
    <string name="pnb_bank">PNB Bank</string>
    <string name="paytm_details">Paytm Details</string>
    <string name="account_holder_name_n_gautam_singla_n_accountno_n_123456789000000_nifsc_punjb2012313"><![CDATA[Account Holder Name -->\n Gautam SIngla \n AccountNo.-->\n 123456789000000\nIFSC-->PUNJB2012313]]></string>
    <string name="upi_id_n_something_paytm_nmobile_n7888410545"><![CDATA[UPI id-->\n something@paytm\nMobile-->\n7888410545]]></string>
</resources>