<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background3"
    android:orientation="vertical"
    tools:context=".Donate">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:gravity="center"
        android:text="@string/pnb_bank"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:padding="5sp"
        android:text="@string/account_holder_name_n_gautam_singla_n_accountno_n_123456789000000_nifsc_punjb2012313"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:text="@string/paytm_details"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:padding="5sp"
        android:text="@string/upi_id_n_something_paytm_nmobile_n7888410545"
        android:textSize="24sp" />
</androidx.appcompat.widget.LinearLayoutCompat>