<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".Suggestion">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:gravity="center"
        android:text="@string/we_appreciate_your_suggestions"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="10sp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:paddingLeft="5sp"
        android:paddingRight="5sp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:layout_marginTop="20sp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/enter_your_suggestions"
        android:inputType="textPersonName"
        android:paddingLeft="5sp"
        android:paddingRight="5sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:text="@string/submit" />

</androidx.appcompat.widget.LinearLayoutCompat>