<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".MainActivity3">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/colorPrimary"
      android:minHeight="?attr/actionBarSize"
      android:theme="?attr/actionBarTheme" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="match_parent"
      android:layout_height="100sp"
      android:gravity="center"
      android:text="@string/headline"
      android:textSize="24sp"
      app:layout_constraintBottom_toBottomOf="parent" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="match_parent"
      android:layout_height="50sp"
      android:layout_gravity="center"
      android:layout_marginTop="50sp"
      android:gravity="center"
      android:text="@string/swipe_right_to_open_navigation_drawer"
      android:textSize="18sp" />

  <Button
      android:id="@+id/button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="50sp"
      android:text="@string/log_out" />

</androidx.appcompat.widget.LinearLayoutCompat>